--- a/contactos.html
+++ b/contactos.html
@@ -12,7 +12,7 @@
     <title>Contactos</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/jpg" href="/Imagenes/Contacto_logo.png">
+    <link rel="icon" type="image/jpg" href="/Imagenes/contacto_logo.png">
 </head>
 
 <body>
@@ -24,15 +24,46 @@
         </nav>
         <hr>
     </header>
-    <h1>Contacto</h1>
     <!--[if lt IE 7]>
             <p class="browsehappy ">You are using an <strong>outdated</strong> browser. Please <a href="# ">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <h2>para ponerse en contacto con nosotros</h2>
-    <p>Comuniquese al: 976386261</p>
-    <p>Escribanos a: Felipe.j_94@outlook.com</p>
+    <h1>Información de Contacto</h1>
+    <div>
+        <table>
+            <tr>
+                <td><strong></strong></td>
+                <td><strong></strong></td>
+                <td><strong></strong></td>
+            </tr>
+            <tr>
+                <td>Telefono:</td>
+                <td>
+                    976386261
+                </td>
+            </tr>
 
-    <script src=" " async defer></script>
+            <tr>
+                <td>Dirección</td>
+                <td>
+                    Parcela San Antonio Calle 6 lt4.
+                </td>
+            </tr>
+            <tr>
+                <td>Correo</td>
+                <td>
+                    <a href="mailto: fmoscosol13@unc.edu.pe">fmoscosol13@unc.edu.pe</a>
+                </td>
+
+            </tr>
+            <tr>
+                <td>Redes Sociales</td>
+                <td>
+                    <a href="https://www.facebook.com/felipe.moscosoluyo" target="blank">
+                        <img title="CLICK PARA VER EL TRAILER" src="Imagenes/facebook.jpg" width="70 " alt=" "></a>
+                </td>
+            </tr>
+        </table>
+        <script src=" " async defer></script>
 </body>
 
 </html>
