--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Moscoso Luyo" />
-    <link rel="icon" type="image/jpg" href="/Imagenes/Home_logo.png">
+    <link rel="icon" type="image/jpg" href="/Imagenes/home_logo.png">
 </head>
 
 <body>
