--- a/sturisticos.html
+++ b/sturisticos.html
@@ -12,7 +12,7 @@
     <title>Sitios Turisticos</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/jpg" href="/Imagenes/Turistico_logo.png">
+    <link rel="icon" type="image/jpg" href="/Imagenes/turistico_logo.png">
 </head>
 
 <body>
@@ -29,14 +29,18 @@
     <section>
         <article>
             <h1>Santa Apolinia</h1>
-            <img style="float:left; margin:10px;" alt="" src="/Imagenes/Santa Apolonia.jpg" width="200" height="200" />
-            <br><br><br>
-            <p> El Mirador que predomina en toda la ciudad. Se puede acceder por las trescientas escaleras. No obstante, al llegar todo el cansancio queda recompensado por la maravillosa vista que hay en la cima. En el lugar se encuentra la silla del Inca,
-                que deviene de la época preinca.</p> <br><br><br><br><br>
+            <img style="float:left; margin:10px;" alt="" src="/Imagenes/santa_apolonia.jpg" width="200" height="200" />
+            <br>
+            <p>El Mirador de Santa Apolonia, está ubicado en el cerro Santa Apolonia donde se puede observar la preciosa vista de la ciudad y todo su esplendor. En el mirador destacan bellas escalinatas y jardines y una capilla de Santa Apolonia que es celebrada
+                el día de la Virgen de Fátima (13 de mayo). En sus linderos se pueden apreciar aún vestigios de edificaciones pre-hispánicas, entre ellas la famosa “Silla del Inca” que está formada por dos bloques de piedra que afloran del mismo cerro,
+                que han sido tallados para darle su forma actual.</p>
+            <p>Ubicación: A 300 metros de la plaza de armas de la ciudad de Cajamarca</p>
+            <p>Horario de visita: de 7:00 am a 6:30 pm</p>
+            <br><br><br><br><br>
         </article>
         <article>
             <h1>Ventanillas de otuzco</h1>
-            <img style="float:left; margin:10px;" alt="" src="/Imagenes/Ventanillas de otuzco.jpg" width="200" height="200" />
+            <img style="float:left; margin:10px;" alt="" src="/Imagenes/ventanillas_otuzco.jpg" width="200" height="200" />
             <br><br><br>
             <p> Se encuentra a 8km. de la ciudad de cajamarca. Las Ventanillas de Otuzco son uno de los ejemplos más maravillosos de necrópolis prehispánicas peruanas. Sobre la pared de roca están labradas varios nichos funerarios cuadrangulares. La mayor
                 parte está vacío, muchas de ellas fueron saqueadas por huaqueros o buscadores de oro. Son construcciones semejantes a unas ventanas y de ahí proviene el nombre que se le atribuyó. Actualmente se encuentra protegida y conservada por el
@@ -44,7 +48,7 @@
         </article>
         <article>
             <h1>Cumbemayo</h1>
-            <img style="float:left; margin:10px;" alt="" src="/Imagenes/Cumbe mayo.jpg" width="200" height="200" />
+            <img style="float:left; margin:10px;" alt="" src="/Imagenes/cumbe_mayo.jpg" width="200" height="200" />
             <br><br><br><br>
             <p> Se encuentran alrededor de 20 km. de la ciudad y 3500 metros de altura. Los Frailones es un bosque de rocas pétreas que dan la impresión de personas en procesión. Además la manera como están erosionadas las rocas, formando cuevas, arcos, elevaciones,
                 abismos, extrañas figuras. A un par de kilómetros se llega al canal prehispánico de Cumbemayo.</p>
