--- a/contactos.html
+++ b/contactos.html
@@ -13,21 +13,20 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/jpg" href="/Imagenes/contacto_logo.png">
+    <link href="Css/estilo.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 
-<body>
+<body ref="stylesheet">
     <header>
         <nav>
-            <strong>
-                <a href="/index.html">Datos Estudiante</a>
-            </strong>
+            <a href="/index.html" class="w3-bar-item w3-button">Inicio</a>
         </nav>
-        <hr>
     </header>
     <!--[if lt IE 7]>
             <p class="browsehappy ">You are using an <strong>outdated</strong> browser. Please <a href="# ">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <h1>Información de Contacto</h1>
+    <h1 class="textocentrado1">Información de Contacto</h1>
     <div>
         <table>
             <tr>
@@ -43,20 +42,20 @@
             </tr>
 
             <tr>
-                <td>Dirección</td>
+                <td>Dirección:</td>
                 <td>
                     Parcela San Antonio Calle 6 lt4.
                 </td>
             </tr>
             <tr>
-                <td>Correo</td>
+                <td>Correo:</td>
                 <td>
                     <a href="mailto: fmoscosol13@unc.edu.pe">fmoscosol13@unc.edu.pe</a>
                 </td>
 
             </tr>
             <tr>
-                <td>Redes Sociales</td>
+                <td>Redes Sociales:</td>
                 <td>
                     <a href="https://www.facebook.com/felipe.moscosoluyo" target="blank">
                         <img title="CLICK PARA VER EL TRAILER" src="Imagenes/facebook.jpg" width="70 " alt=" "></a>
