--- a/index.html
+++ b/index.html
@@ -14,25 +14,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Moscoso Luyo" />
     <link rel="icon" type="image/jpg" href="/Imagenes/home_logo.png">
+    <link href="Css/estilo.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 
-<body>
+<body ref="stylesheet">
     <header>
         <nav>
-            <strong>
-                <a href="/contactos.html">Contacto</a>
-                <a href="/sturisticos.html">Sitios Turisticos</a>
-            </strong>
+            <a href="/contactos.html" class="w3-bar-item w3-button">Contacto</a>
+            <a href="/sturisticos.html" class="w3-bar-item w3-button">Sitios Turisticos</a>
         </nav>
-        <hr>
     </header>
 
     <section>
         <article>
-            <div align="center">
-                <h1>Pagina Web Personal</h1>
-                <img src="/Imagenes/Moscoso.jpg" width="350" height="350">
-                <h1>Moscoso Luyo Felipe de Jesús</h1>
+            <div>
+                <h1 class="textocentrado1">Pagina Web Personal</h1>
+                <img src="/Imagenes/Moscoso.jpg" class="img1">
+                <h1 class="textocentrado1">Moscoso Luyo Felipe de Jesús</h1>
             </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque minima quae, laudantium earum itaque, velit cupiditate quis ratione architecto quasi ullam repellat harum aperiam commodi aut. Perspiciatis natus ipsam repellat.</p>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius voluptate hic ipsam corrupti excepturi tempore eligendi earum obcaecati nostrum quae mollitia, qui repellendus ea totam fugit, repudiandae porro ut illum?</p>
@@ -43,7 +42,7 @@
 
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+            <![endif]-->
 
     <script src="" async defer></script>
 </body>
