--- a/sturisticos.html
+++ b/sturisticos.html
@@ -13,34 +13,34 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/jpg" href="/Imagenes/turistico_logo.png">
+    <link href="Css/estilo.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 
-<body>
+<body ref="stylesheet">
     <header>
         <nav>
-            <strong>
-                <a href="/index.html">Datos Estudiante</a>
-            </strong>
+            <a href="/index.html" class="w3-bar-item w3-button">Información personal</a>
         </nav>
-        <hr>
     </header>
-    <h1>Sitios turisticos</h1>
+    <h1 class="textocentrado1">Sitios turisticos</h1>
 
-    <section>
+    <section class="p1">
         <article>
             <h1>Santa Apolinia</h1>
-            <img style="float:left; margin:10px;" alt="" src="/Imagenes/santa_apolonia.jpg" width="200" height="200" />
+            <img src="/Imagenes/santa_apolonia.jpg" class="img2" />
             <br>
             <p>El Mirador de Santa Apolonia, está ubicado en el cerro Santa Apolonia donde se puede observar la preciosa vista de la ciudad y todo su esplendor. En el mirador destacan bellas escalinatas y jardines y una capilla de Santa Apolonia que es celebrada
                 el día de la Virgen de Fátima (13 de mayo). En sus linderos se pueden apreciar aún vestigios de edificaciones pre-hispánicas, entre ellas la famosa “Silla del Inca” que está formada por dos bloques de piedra que afloran del mismo cerro,
                 que han sido tallados para darle su forma actual.</p>
             <p>Ubicación: A 300 metros de la plaza de armas de la ciudad de Cajamarca</p>
             <p>Horario de visita: de 7:00 am a 6:30 pm</p>
-            <br><br><br><br><br>
+            <br>
+
         </article>
         <article>
             <h1>Ventanillas de otuzco</h1>
-            <img style="float:left; margin:10px;" alt="" src="/Imagenes/ventanillas_otuzco.jpg" width="200" height="200" />
+            <img src="/Imagenes/ventanillas_otuzco.jpg" class="img2" />
             <br><br><br>
             <p> Se encuentra a 8km. de la ciudad de cajamarca. Las Ventanillas de Otuzco son uno de los ejemplos más maravillosos de necrópolis prehispánicas peruanas. Sobre la pared de roca están labradas varios nichos funerarios cuadrangulares. La mayor
                 parte está vacío, muchas de ellas fueron saqueadas por huaqueros o buscadores de oro. Son construcciones semejantes a unas ventanas y de ahí proviene el nombre que se le atribuyó. Actualmente se encuentra protegida y conservada por el
@@ -48,8 +48,8 @@
         </article>
         <article>
             <h1>Cumbemayo</h1>
-            <img style="float:left; margin:10px;" alt="" src="/Imagenes/cumbe_mayo.jpg" width="200" height="200" />
-            <br><br><br><br>
+            <img src="/Imagenes/cumbe_mayo.jpg" class="img2" />
+            <br><br>
             <p> Se encuentran alrededor de 20 km. de la ciudad y 3500 metros de altura. Los Frailones es un bosque de rocas pétreas que dan la impresión de personas en procesión. Además la manera como están erosionadas las rocas, formando cuevas, arcos, elevaciones,
                 abismos, extrañas figuras. A un par de kilómetros se llega al canal prehispánico de Cumbemayo.</p>
         </article>
