--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
         <nav>
             <a href="/contactos.html" class="w3-bar-item w3-button">Contacto</a>
             <a href="/sturisticos.html" class="w3-bar-item w3-button">Sitios Turisticos</a>
+            <a href="/lab01.html" class="w3-bar-item w3-button">Lab 01</a>
         </nav>
     </header>
-
+    <hr>
     <section>
         <article>
             <div>
