--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
               <span class="navbar-toggler-icon"></span>
             </button>
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html"><b class="fas fa-file-signature">BIBLIOGRAFÍA</b></a>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item mr-4">
+                    <a class="nav-link active" href="index.html"><b class="fas fa-file-signature">BIBLIOGRAFÍA</b></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item  mr-4">
                     <a class="nav-link" href="sitioturisticos.html"><b class="fas fa-car-side">SITIOS TURÍSTICOS</b></a>
                 </li>
                 <li class="nav-item">
@@ -50,97 +50,110 @@
         <div class="row">
             <div class="col-1">
             </div>
-            <div class="col-10">
+            <div class="col-md-10">
                 <div class="contenedor">
                     <div class="contenido">
-                        <div class="row">
+                        <div class="row justify-content-center">
                             <div class="col-md-4">
-                                <img src="Imagenes/moscoso.jpg" width="300px" height="300px" alt="">
+                                <img src="Imagenes/moscoso.jpg" class="img-fluid" alt="">
                             </div>
                             <div class="col-md-4">
-                                <p class="azul">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas voluptate perspiciatis beatae, error ab maxime ex quos exercitationem! Unde eos repudiandae temporibus vero praesentium nulla iste voluptatem omnis perspiciatis
-                                    recusandae.
-                                </p>
+                                <div class="card" style="width: 18rem;">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Moscoso Luyo Felipe de Jesús</h5>
+                                    </div>
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">DNI: 755667021</li>
+                                        <li class="list-group-item">Fecha de Nacimineto: 06/04/1994</li>
+                                        <li class="list-group-item">Estado Civil:Soltero</li>
+                                    </ul>
+                                    <div class="card-body">
+                                        <a href="https://www.facebook.com/felipe.moscosoluyo" class="card-link">Mi Perfil</a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-1"> </div>
                 </div>
-                <hr>
             </div>
-            <!--Espaciado-->
-            <!--Contenedor Musica-->
-            <div class="musica">
-                <h2>Musica Favorita</h2>
-            </div>
-            <!--Imagenes-->
-            <div class="container">
-                <div class="row">
-                    <div class="row" id="centrar">
-                        <div class="col-sm">
-                            <img src="Imagenes/pink_floyd.jpg" width="300px" height="300px" alt="" data-toggle="modal" data-target="#exampleModal1">
-                        </div>
-                        <div class="col-sm">
-                            <img src="Imagenes/Dio.jpg" width="300px" height="300px" alt="" data-toggle="modal" data-target="#exampleModal2">
-                        </div>
-                    </div>
+        </div>
+    </div>
+    <hr>
+    </div>
+    <!--Espaciado-->
+    <!--Contenedor Musica-->
+    <div class="musica">
+        <h2>Musica Favorita</h2>
+    </div>
+    <!--Imagenes-->
+    <div class="container">
+        <div class="row">
+            <div class="row" id="centrar">
+                <div class="col-sm">
+                    <img src="Imagenes/pink_floyd.jpg" width="300px" height="300px" alt="" data-toggle="modal" data-target="#exampleModal1">
                 </div>
-                <!--Musica-->
-                <div class="row">
-                    <div class="row" id="centrar">
-                        <div class="col-sm">
-                            <audio controls="controls">
+                <div class="col-sm">
+                    <img src="Imagenes/Dio.jpg" width="300px" height="300px" alt="" data-toggle="modal" data-target="#exampleModal2">
+                </div>
+            </div>
+        </div>
+        <!--Musica-->
+        <div class="row">
+            <div class="row" id="centrar">
+                <div class="col-sm">
+                    <audio controls="controls">
                                 <source src="Musica/another_brick_in_the_wall.mp3" type="audio/ogg" />
                         </audio>
-                        </div>
-                        <div class="col-sm">
-                            <audio controls="controls">
+                </div>
+                <div class="col-sm">
+                    <audio controls="controls">
                                 <source src="Musica/Ronnie James Dio - Dream On.mp3" type="audio/ogg" />
                         </audio>
+                </div>
+            </div>
+        </div>
+        <!--Espaciado-->
+        <div class="pTop30"></div>
+        <hr>
+        <!--Footer-->
+        <footer class="page-footer font-small blue pt-4">
+            <div class="container-fluid text-center text-md-left">
+                <div class="row">
+                    <div id="centrar" class="col-md-6 mt-md-0 mt-3">
+                        <h5 class="text-uppercase">Moscoso Luyo Felipe</h5>
+                        <p>
+                            Estudiante de 9°Ciclo de Ingenieria de Sistemas - Universidad Nacional de Cajamarca
+                        </p>
+                    </div>
+                    <hr class="clearfix w-100 d-md-none pb-3">
+                    <div class="col-md-3 mb-md-0 mb-3">
+                        <div class="col-md-3 mb-md-0 mb-3">
+                            <h5 class="text-uppercase">Redes Sociales</h5>
+
+                            <ul class="list-unstyled">
+                                <li>
+                                    <a href="https://www.facebook.com/felipe.moscosoluyo" class="fab fa-facebook">Facebook</a>
+                                </li>
+                                <li>
+                                    <a href="./contacto.html" class="fab fa-whatsapp">WhatsApp</a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
-                <!--Espaciado-->
-                <div class="pTop30"></div>
-                <hr>
-                <!--Footer-->
-                <footer class="page-footer font-small blue pt-4">
-                    <div class="container-fluid text-center text-md-left">
-                        <div class="row">
-                            <div id="centrar" class="col-md-6 mt-md-0 mt-3">
-                                <h5 class="text-uppercase">Moscoso Luyo Felipe</h5>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur rem exercitationem iusto asperiores, pariatur odit fuga quos veritatis quis distinctio! Libero error, incidunt cum nisi facilis molestias quidem possimus
-                                    voluptatem..
-                                </p>
-                            </div>
-                            <hr class="clearfix w-100 d-md-none pb-3">
-                            <div class="col-md-3 mb-md-0 mb-3">
-                                <div class="col-md-3 mb-md-0 mb-3">
-                                    <h5 class="text-uppercase">Redes Sociales</h5>
-
-                                    <ul class="list-unstyled">
-                                        <li>
-                                            <a href="https://www.facebook.com/felipe.moscosoluyo" class="fab fa-facebook">Facebook</a>
-                                        </li>
-                                        <li>
-                                            <a href="./contacto.html" class="fab fa-whatsapp">WhatsApp</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                </footer>
-                <!--footer2-->
-                <footer id="footerback" class="page-footer font-small blue">
-                    <div class="footer-copyright text-center py-3">© 2018 Copyright:
-                        <a href="https://github.com/MoscosoLuyoFelipe"> MoscosoLuyo.GitHub</a>
-                    </div>
-                </footer>
-                <!--Scripts-->
-                <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js " integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous "></script>
-                <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
-                <script src="" async defer></script>
+        </footer>
+        <!--footer2-->
+        <footer id="footerback" class="page-footer font-small blue">
+            <div class="footer-copyright text-center py-3">© 2018 Copyright:
+                <a href="https://github.com/MoscosoLuyoFelipe"> MoscosoLuyo.GitHub</a>
+            </div>
+        </footer>
+        <!--Scripts-->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js " integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous "></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
+        <script src="" async defer></script>
 </body>
 
 </html>
