--- a/sitioturisticos.html
+++ b/sitioturisticos.html
@@ -31,12 +31,12 @@
 
 
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item  mr-4">
                     <a class="nav-link" href="./index.html"><b class="fas fa-file-signature">BIBLIOGRAFÍA</b></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./sitioturisticos.html"><b class="fas fa-car-side">SITIOS TURÍSTICOS</b></a>
+                <li class="nav-item  mr-4">
+                    <a class="nav-link active" href="./sitioturisticos.html"><b class="fas fa-car-side">SITIOS TURÍSTICOS</b></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./contacto.html"><b class="fas fa-address-card">CONTACTO</b></a>
@@ -106,7 +106,9 @@
             <div class="row">
                 <div id="centrar" class="col-md-6 mt-md-0 mt-3">
                     <h5 class="text-uppercase">Moscoso Luyo Felipe</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur rem exercitationem iusto asperiores, pariatur odit fuga quos veritatis quis distinctio! Libero error, incidunt cum nisi facilis molestias quidem possimus voluptatem..</p>
+                    <p>
+                        Estudiante de 9°Ciclo de Ingenieria de Sistemas - Universidad Nacional de Cajamarca
+                    </p>
                 </div>
                 <hr class="clearfix w-100 d-md-none pb-3">
                 <div class="col-md-3 mb-md-0 mb-3">
