--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="contenido">
                         <div class="row justify-content-center">
                             <div class="col-md-4">
-                                <img src="Imagenes/moscoso.jpg" class="img-fluid" alt="">
+                                <img src="Imagenes/moscoso.jpg" alt="" width="300px" height="312px">
                             </div>
                             <div class="col-md-4">
                                 <div class="card" style="width: 18rem;">
