--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="contenedor">
                     <div class="contenido">
                         <div class="row justify-content-center">
-                            <div class="col-md-4">
+                            <div class="text-center">
                                 <img src="Imagenes/moscoso.jpg" alt="" width="300px" height="312px">
                             </div>
                             <div class="col-md-4">
@@ -74,7 +74,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-1"> </div>
+
                 </div>
             </div>
         </div>
